opDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otusproject-deployment
spec:
  selector:
    matchLabels:
      app: otusproject
  replicas: 2 
  template:
    metadata:
      labels:
        app: otusproject
    spec:
      containers:
      - name: otusproject
        image: otusproject:5.1        
        ports:
        - containerPort: 8000
