opService.yaml
apiVersion: v1
kind: Service
metadata:
  name: otusproject-service
spec:
  type: LoadBalancer
  selector:
    app: otusproject
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
