app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otusproject-deployment
spec:
  selector:
    matchLabels:
      app: otusproject
  replicas: 2
  template:
    metadata:
      labels:
        app: otusproject
    spec:
      containers:
        - name: otusproject
          image: atott/otusproject:6.0.1
          ports:
            - containerPort: 8080
---

apiVersion: v1
kind: Service 
metadata:
  name: otusproject-service
spec:
  selector:
    app: otusproject
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 8080
  type: LoadBalancer

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otusproject-ingress
spec:
  rules:
  - host: "arch.homework"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: otusproject-service
            port:
              number: 80
  ingressClassName: nginx
